
NEWS:

NEW: [features/improvements]
+Plugins can now be uninstalled through plugin manager.
+New api for plugins and other clients to customize buffer context menu.

BUG FIXES:
+Return unique sorted list of terms when using extended autocomp.
+Fix some color issues when running under GTK.
+Fix line number preference not being remembered on startup.
+Fix error in handling corrupted session files.

#-----------------------------------------------------------------------------#

VERSION 0.5.05
DATE 09/02/2009
29th Alpha Release

NEWS:

Important bug fix release to fix a critical regression with handling of files that have
BOM characters in them. All users of release 0.5 should quickly update to this
release as the bug could lead to data loss.

NEW: [features/improvements]
+Find bar is now customizable via right click menu.
+Add Hungarian, Galician, Romanian, and Slovak translations.
+Updated translations

BUG FIXES:
+Fix error in handling BOM when saving files that could result in data loss.
+Use wxversion to make sure that Editra is started with wxPython2.8 or later.

#-----------------------------------------------------------------------------#

VERSION 0.5.0
DATE 08/20/2009
28th Alpha Release

NEWS:

This release contains a large number of important bug fixes. Due to various
outside issues that have limited my development time the last few monthes I have
decided to change the focus to bug fixes for this release and most of the 
features I had slated for 0.5 have been pushed back to the later 0.5 series 
releases in order focus on stability for 0.5.

NEW: [features/enhancements]
+BackTab can no be used to compress space that is embedded in a line.
+Record position changes from mouse clicks in position navigation history.
+Add command line switch -g for specifying line to open file to.

BUG FIXES:
+Fix copying from OutputBuffer.
+Fix some error handling if file session handling.
+Fix some minor translation issues.